--- a/src/app/componentes/clientes/list-cliente/list-cliente.component.html
+++ b/src/app/componentes/clientes/list-cliente/list-cliente.component.html
@@ -11,7 +11,12 @@
               <tr>
                   <th>CPF</th>
                   <th>Nome</th>
-                  <th> </th>
+                  <th> 
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Exibir Inativos</label>
+                    </div>
+                  </th>
                   <th><button routerLink="/novocliente" type="button" class="btn btn-primary">Novo Cliente</button></th>
               </tr>
             </thead>
@@ -21,7 +26,8 @@
                 <td>{{ cliente.nome }}</td>
                   <td><a [routerLink]="['/detallhescliente', cliente.id]" class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
                   <a [routerLink]="['/cadveiculos',cliente.id]"  class="waves-effect waves-light btn"><i class="material-icons center">drive_eta</i></a>
-                  <a (click)="alterarSituacao(cliente)" style=" color : red;"  class="waves-effect waves-light btn"><i class="material-icons center">remove_circle_outline</i></a></td>
+                  <a *ngIf="cliente.situacao==0" (click)="alterarSituacao(cliente)" style=" color : green; font-size: medium;"  class="waves-effect waves-light btn"><i id="turn" class="material-icons center">toggle_on</i></a>
+                  <a *ngIf="cliente.situacao==9" (click)="alterarSituacao(cliente)" style=" color : gray" class="waves-effect waves-light btn"><i id="turn" class="material-icons center">toggle_off</i></a></td>
               </tr> 
             </tbody>
           </table>
