--- a/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
+++ b/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
@@ -21,8 +21,8 @@
                 <td>{{ funcionario.matricula }}</td>
                 <td>{{ funcionario.nome }}</td>            
                 <td >
-                  <button *ngIf="funcionario?.situacao == 9" id="funcionario"  class="btn btn-sucess"   type="button" name="action"><i class="material-icons center" onclick="alterarSituacao()">done</i></button>
-                  <button *ngIf="funcionario?.situacao == 0" id="funcionario"  class="btn btn-primary" type="button" name="action"><i class="material-icons center" onclick="alterarSituacao()">done</i></button></td>
+                  <a *ngIf="funcionario.situacao==0" (click)="alterarSituacao(funcionario)" style=" color : green; font-size: medium;"  class="waves-effect waves-light btn"><i class="material-icons center">toggle_on</i></a>
+                  <a *ngIf="funcionario.situacao==9" (click)="alterarSituacao(funcionario)" style=" color : gray" class="waves-effect waves-light btn"><i class="material-icons center">toggle_off</i></a></td>
                 
               </tr> 
             </tbody>
